# keeperfx

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  keeperfx.code-workspace  pkg_gfx.mk  transform_config.py  transform_config_fix.py
.devcontainer/: devcontainer.json
.github/workflows/: ci-homebrew.yml  docker-publish.yml  release.yml
campgns/keeporig/: achievements.cfg
campgns/origplus/: achievements.cfg
data/: achievements_global.cfg
data/menus/: achievements.json  campaign_hub.json  global_load.json  levelpack_menu.json  main_menu.json
docker/: README.md  compose.yml
docker/mingw32/: Dockerfile
docker/vitasdk/: Dockerfile
docs/: SUBMODULES.md  vita-subsystem-reference.md
lang/: gtext_chi.po  gtext_cht.po  gtext_cze.po  gtext_dut.po  gtext_eng.pot  gtext_fre.po  gtext_ger.po  gtext_ita.po  gtext_jpn.po  gtext_kor.po  gtext_lat.po  gtext_pol.po  gtext_por.po  gtext_rus.po  gtext_spa.po  gtext_swe.po  gtext_ukr.po
lang/campgns/keeporig/: text_eng.pot
lang/campgns/origplus/: text_eng.pot
src/: ariadne.c  ariadne_points.c  ariadne_points.h  ariadne_tringls.c  ariadne_tringls.h  bflib_basics.c  bflib_basics.h  bflib_render.c  bflib_sprite.h  bflib_video.c  config.c  config.h  config_campaigns.c  config_compp.c  config_creature.c  config_crtrstates.c  config_cubes.c  config_effects.c  config_lenses.c  config_magic.c  config_objects.c  config_rules.c  config_rules.h  config_strings.h  config_terrain.c  config_trapdoor.c  console_cmd.c  creature_instances.c  creature_jobs.c  creature_states.c  creature_states_hero.c  creature_states_tortr.c  custom_sprites.c  custom_sprites_cache.c  custom_sprites_cache.h  engine_render.c  engine_render.h  engine_textures.c  engine_textures.h  front_highscore.c  (+54 more)
src/ftests/tests/: ftest_bug_imp_goldseam_dig.c
src/keeperfx/achievement/: achievement_api.c  achievement_api.h  achievement_definitions.c  achievement_definitions.h  achievement_save.c  achievement_save.h  achievement_tracker.c  achievement_tracker.h  gog_galaxy_api.cpp
src/keeperfx/achivement/: achievement_api.c  achievement_api.h  achievement_definitions.c  achievement_definitions.h  achievement_tracker.c  achievement_tracker.h
src/kfx/achievement/: achievement_api.c  achievement_api.h  achievement_definitions.c  achievement_definitions.h  achievement_save.c  achievement_save.h
src/kfx/integration/: GogBackend.cpp  GogBackend.h  IntegrationManager.cpp  IntegrationManager.h  SteamBackend.cpp  SteamBackend.h  integration_bridge.h
src/kfx/ui/menu/: CallbackRegistry.cpp  CallbackRegistry.h  DynamicText.cpp  DynamicText.h  FreeformText.cpp  FreeformText.h  JsonParser.cpp  JsonParser.h  MenuBuilder.cpp  MenuBuilder.h  MenuLoader.cpp  MenuLoader.h  MenuRegistry.cpp  MenuRegistry.h
src/platform/: IPlatform.h  PlatformManager.cpp  PlatformManager.h  PlatformVita.cpp  PlatformVita.h  kfx_breadcrumb.h  vita_malloc_wrap.c
src/platform/debugscreen/: debugScreen.c
src/renderer/: RendererVita.cpp
tools/: CMakeLists.txt  README.md  generate_achievements_vdf.py  scaffold_room.sh  validate_sprite_config.py  vita-parse-crash.ps1
